<resources>
    <string name="app_name">OLS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="text1">
        "Instructions For Application Submission\n\n"


    </string>
    <string name="text2">
        "Following Are The Stages In Application Submission In Issuing Learner's License In Following Order:\n"
    </string>
    <string name="text3">
        "1.Fill Applicant Details\n"
        "2.Upload Documents\n"
        "3.Upload Photo And Signature\n"
        "4.Learning License Test Slot Booking\n"
        "5.Payment Of Fee\n\n"

     </string>
    <string name="text4">
        Application For Learner\'s License(LL)
    </string>
    <string name="text5">
        "I do not have any license\n"
    </string>
    <string name="text6">
        "holding driving license,Enter driving license number"

    </string>
    <string name="text7">
        "Driving License Number"

    </string>
    <string name="text8">
        "Date of Birth"
    </string>
    <string name="text9">

        "holding learner\'s license,Enter Learning License number"
    </string>
    <string name="text10">
        "Learning License Number"
    </string>
    <string name="text11">
        "Select RTO office from where LL is being applied."
    </string>
    <string name="text12">
        "*"
    </string>
    <string-array name="spinner">
        <item>ASSAM</item>
        <item>CHANDIGARH</item>
        <item>DELHI</item>
        <item>GUJRATH</item>
        <item>HARYANA</item>
        <item>HIMACHAL PRADESH</item>
        <item>JAMMU AND KASHMIR</item>
        <item>JHARKHAND</item>
        <item>KARNATAKA</item>
        <item>MAHARASHTRA</item>
        <item>MEGHALAYA</item>
        <item>ODISHA</item>
        <item>PONDICHERRY</item>
        <item>RAJASTHAN</item>
        <item>TAMILNADU</item>
        <item>UTTARAKHAND</item>
        <item>UTTAR PRADESH</item>

    </string-array>
    <string-array name="spinner_rto">
        <item>RTO,MUMBAI(EAST)</item>
        <item>RTO,THANE</item>
        <item>DY.RTO,PEN(RAIGAD)</item>
        <item>RTO,KOLHAPUR</item>
        <item>DY.RTO,SANGLI</item>
        <item>DY.RTO,SOLAPUR</item>
        <item>RTO,NASHIK</item>
        <item>DY.RTO,AHMEDNAGAR</item>
        <item>DY.RTO,SHRIRAMPUR</item>
        <item>DY.RTO,JALGAON</item>
        <item>RTO,AURANGABAD</item>
        <item>DY.RTO,PARBHANI</item>
        <item>DY.RTO,BEED</item>
        <item>RTO,LATUR</item>
        <item>RTO,NANDED</item>
        <item>RTO,AMRAVATI</item>
        <item>RTO,NAGPUR_CITY</item>
        <item>DY.RTO,GADCHIROLI</item>
        <item>DY.RTO,GONDIA</item>
        <item>DY.RTO,VASHIM</item>
        <item>RTO,NAGPUR_RURAL</item>
        <item>DY.RTO,BARAMATI</item>
        <item>DY.RTO,VASHI</item>
        <item>RTO,PANVEL</item>
        <item>DY.RTO,NAGPUR(EAST)</item>
    </string-array>
    <string name="text13">
        "PINCODE"
    </string>
    <string name="text14">
        "Personal Details"
    </string>
    <string name="text15">
        "First Name"
    </string>
     <string name="text16">
        "Middle Name"
    </string>
     <string name="text17">
        "Last Name"
    </string>
    <string name="text18">
        "Adhar Number"
    </string>
    <string name="text19">
        "NPR Number"
    </string>
    <string name="text20">
        "FULL NAME"
    </string>
    <string name="text21">
        "Ex. 04023659856"
    </string>
<string name="text22">
        "Ex. abc@email.com"
    </string>
    <string name="text23">
        "Ex. 9876543210"
    </string>
    <string name="text24">
        "I am willing to donate my organs, in case of accidental death?"
    </string>
    <string name="text25">
        "I hereby declare that to the best of my knowledge and belief the particulars given above are true."
    </string>
    <string-array name="spinner_relation">
        <item>FATHER</item>
        <item>MOTHER</item>
        <item>HUSBAND</item>
        <item>GUARDIAN</item>
    </string-array>
    <string-array name="spinner_qualification">
        <item>Illiterate</item>
        <item>Below 8th</item>
        <item>8th Passed</item>
        <item>10th Standard or Equivalent</item>
        <item>ITI/Certificate Course</item>
        <item>10+2 or Equivalent</item>
        <item>Diploma in any Discipline</item>
        <item>Graduate in any Medical Sciences</item>
        <item>Graduate in Non Medical Sciences</item>
        <item>Post Graduate in Non Medical Sciences</item>
        <item>M.Phil in any Descipline</item>
        <item>Doctrate in any Descipline </item>
        <item>Not Specified/NA</item>
    </string-array>
    <string-array name="spinner_bg">
        <item>A+</item>
        <item>A-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>0-</item>
        <item>UNKNOWN</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string-array name="districtlist">
        <item>SELECT</item>
        <item>AHMADNAGAR</item>
        <item>AKOLA</item>
        <item>AMRAVATI</item>
        <item>AURANGABAD</item>
        <item>BHANDARA</item>
        <item>BID</item>
        <item>BULDANA</item>
        <item>CHANDRAPUR</item>
        <item>DHULE</item>
        <item>GADCHIROLI</item>
        <item>GONDIA</item>
        <item>HINGOLI</item>
        <item>JALGAON</item>
        <item>JALNA</item>
        <item>KOLHAPUR</item>
        <item>LATUR</item>
        <item>MUMBAI</item>
        <item>MUMBAISUBURBAN</item>
        <item>NAGPUR</item>
        <item>NANDED</item>
        <item>NANDURBAR</item>
        <item>NASHIK</item>
        <item>OSMANABAD</item>
        <item>PARBHANI</item>
        <item>PUNE</item>
        <item>RAIGARH</item>
        <item>RATNAGIRI</item>
        <item>SANGLI</item>
        <item>SATARA</item>
        <item>SINDHUDURG</item>
        <item>SOLAPUR</item>
        <item>THANE</item>
        <item>WARDHA</item>
        <item>WASHIM</item>
        <item>YAVATMAL</item>
    </string-array>
    <string-array name="subdistrict_aurangabad">
        <item>SELECT</item>
        <item>AURANGABAD</item>s.equals(abad.i)
        <item>GANGAPUR</item>
        <item>KANNAD</item>
        <item>KHULTABAD</item>
        <item>PAITHAN</item>
        <item>PHULAMBRI</item>
        <item>SILLOD</item>
        <item>SOEGAON</item>
        <item>VAIJAPUR</item>
    </string-array>
    <string-array name="subdistrict_nagar">
        <item>SELECT</item>
        <item>AKOLA</item>
        <item>JAMKHED</item>
        <item>KARJAT</item>
        <item>KOPARGAON</item>
        <item>NAGAR</item>
        <item>NEVASA</item>
        <item>PARNER</item>
        <item>PATHARDI</item>
        <item>RAHTA</item>
        <item>RAHURI</item>
        <item>RAHURI</item>
        <item>SANGAMNER</item>
        <item>SHEVGAON</item>
        <item>SHRIGONDA</item>
        <item>SHRIRAMPUR</item>
    </string-array>
    <string-array name="subdistrict_akola">
        <item>SELECT</item>
        <item>AKOLA</item>
        <item>AKOT</item>
        <item>BALAPUR</item>
        <item>BARSHITAKLI</item>
        <item>MURTIJAPUR</item>
        <item>PARTUR</item>
        <item>TELHARA</item>
    </string-array>
    <string-array name="subdistrict_amravati">
        <item>SELECT</item>
        <item>ACHALPUR</item>
        <item>AMRAVATI</item>
        <item>ANJANGAON SURJI</item>
        <item>BHATKULI</item>
        <item>CHANDURBAZAR</item>
        <item>CHANDUR RAILWAY</item>
        <item>CHIKHALDARA</item>
        <item>DARYAPUR</item>
        <item>DHAMANGAON RAILWAY</item>
        <item>DHARNI</item>
        <item>MORSHI</item>
        <item>NANDGAON-KHANDESHWAR</item>
        <item>TEOSA</item>
        <item>WARUD</item>
    </string-array>
    <string-array name="subdistrict_bhandara">
        <item>SELECT</item>
        <item>BHANDARA</item>
        <item>LAKHANDUR</item>
        <item>LAKHANI</item>
        <item>MOHADI</item>
        <item>PAUNI</item>
        <item>SAKOLI</item>
        <item>TUMSAR</item>
    </string-array>
    <string-array name="subdistrict_dhule">
        <item>SELECT</item>
        <item>DHULE</item>
        <item>SAKRI</item>
        <item>SHIRPUR</item>
        <item>SINDKHEDE</item>
    </string-array>
    <string-array name="subdistrict_bid">
        <item>SELECT</item>
        <item>AMBEJOGAI</item>
        <item>ASHTI</item>
        <item>BID</item>
        <item>DHARUR</item>
        <item>GEORAI</item>
        <item>KAIJ</item>
        <item>MANJLEGAON</item>
        <item>PARLI</item>
        <item>PATODA</item>
        <item>SHIRUR(KASAR)</item>
        <item>WADWANI</item>
    </string-array>
    <string-array name="subdistrict_buldana">
        <item>SELECT</item>
        <item>BULDANA</item>
        <item>CHIKHLI</item>
        <item>DEOLGAON RAJA</item>
        <item>JALGAON</item>
        <item>KHAMGAON</item>
        <item>LONAR</item>
        <item>MALKAPUR</item>
        <item>MEHKAR</item>
        <item>MOTALA</item>
        <item>NANDURA</item>
        <item>SANGRAMPUR</item>
        <item>SHEGAON</item>
        <item>SINDKHED RAJA</item>
    </string-array>
    <string-array name="subdistrict_chandrapur">
        <item>SELECT</item>
        <item>BALLARPUR</item>
        <item>BHADRAVATI</item>
        <item>BRHMAPURI</item>
        <item>CHANDRAPUR</item>
        <item>CHIMUR</item>
        <item>GONDPIPRI</item>
        <item>JIWATI</item>
        <item>KORPANA</item>
        <item>MUL</item>
        <item>NAGBHIR</item>
        <item>POMBHURNA</item>
        <item>RAJURA</item>
        <item>SAWALI</item>
        <item>SINDEWAHI</item>
        <item>WARORA</item>
        <item></item>
    </string-array>
<string name="class1">
    "MOTOR CYCLE LESS THAN 50CC(MC50CC)"
</string>
<string name="class2">
    "MOTOR CYCLE WITHOUT GEAR(NON TRANSPORT)(MCWOG)"
</string>
    <string name="class3">
    "MOTOR CYCLE WITH GEAR(NON TRANSPORT)(MCWG)"
</string>
    <string name="class4">
    "LMV-NT-Car(LMV)"
</string>
    <string name="class5">
    "LMV  -TRACTOR-NT(TRCTOR)"
</string>
<string name="class6">
    "LMV(TRANSPORT(LMV GV))"
</string>
    <string name="class7">
    "LMV -3 WHEELER CAB(3W-CAB)"
</string>
    <string name="class8">
    "LMV -3 WHEELER TRANSPORT GOODS NON PSV(3W-GV)"
</string>
    <string name="class9">
    "INVALID CARRIAGE VEHICLE(INVCRG)"
</string>
<string name="class10">
    "ROAD ROLLER(RDRLR)"
</string>
    <string name="class11">
    "OTHER OTHERS(OTHER)"
</string>
    <string name="class12">
    "OTHERS-LOADER/EXCAVATOR(LDRXCV)"
</string>
    <string name="class13">
    "OTHERS-CRANES(CRANE)"
</string>
<string name="class14">
    "OTHERS-ForkliftT(FLIFT)"
</string>
    <string name="class15">
    "OTHERS-BORING RIGG(BRIGS)"
</string>
    <string name="class16">
    "OTHERS-Construction Equipments(CNEQP)"
</string>
 <string name="class17">
    "Invalid Carriage-2nd Vehicle(INVCG2)"
</string>
     <string name="class18">
    "Invalid Carriage-3rd Vehicle(INVCG3)"
</string>
     <string name="class19">
    "E-CART (eCART)"
</string>
    <string name="class20">
    "E-RIKSHAW(eRIKSH)"
</string>
<string name="string1">
    "I have been convicted/disqualified/my license was cancelled/suspended/my license was revoked?"
</string>
</resources>