<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.ols.FragmentCheck">


    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.hp.llapp.ScrollingActivity5"
     >



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textColor="@color/firebrick"
                    android:text="SELECT CLASS OF VEHICLES"
                    android:textAllCaps="true"
                    android:id="@+id/classofv" />
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:text="@string/text12"
                    android:id="@+id/star2" />
            </LinearLayout>





            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="true"
                android:text="@string/class1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass1"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class2"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass2"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class3"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass3"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class4"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass4"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class5"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass5"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class6"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass6"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class7"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass7"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class8"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass8"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class9"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass9"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class10"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass10"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class11"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass11"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class12"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass12"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class13"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass13"
                />

            <TextView
                android:text="I WANT IT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class14"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass14"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class15"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass15"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class16"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass16"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class17"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass17"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class18"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass18"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class19"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass19"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/class20"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxclass20"
                />



            <TextView
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/string1"
                android:textAllCaps="true"
                android:id="@+id/textstring1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="(PLEASE TICK IF YES)"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/checkboxstring1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="ARE YOU FROM DRIVING SCHOOL?"
                    android:textAllCaps="true"
                    android:id="@+id/textlast"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="YES I AM"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:id="@+id/checkboxstring2"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="30dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:onClick="address"
                    android:text="submit"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:cursorVisible="true"
                    android:gravity="center"
                    android:id="@+id/btsubmit" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="35dp"
                    android:onClick="refreshbtn"
                    android:text="Refresh"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:cursorVisible="true"
                    android:gravity="center"
                    android:id="@+id/btrefresh" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="40dp"
                    android:onClick="cancel"
                    android:text="Cancel"
                    android:textColor="@color/white"
                    android:background="@color/colorPrimary"
                    android:cursorVisible="true"
                    android:gravity="center"
                    android:id="@+id/btcancel" />
            </LinearLayout>


        </LinearLayout>








    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
